[package]
name = "gmols-server"
authors.workspace = true
description = "The GMols server providing functionalities to the GMols client."
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum = "0.7.5"
public-search.workspace = true
serde_json.workspace = true
tokio.workspace = true

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Adrien Lagesse"]
description = "Utility crate for the GMols server."
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"
readme = "README.md"
keywords = [
    "chemio-informatics",
    "bio-informatics",
    "database",
    "machine-learning",
]

[workspace.dependencies]
anyhow = "1.0.82"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1" }
public-search = { path = "crates/public-search" }
