[package]
name = "public-search"
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
reqwest.workspace= true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true